--- a/block.config.json
+++ b/block.config.json
@@ -3,8 +3,8 @@
   "type": "package",
   "blockId": "WZLH8fEmsBHXtfnBaRusu",
   "source": {
-    "https": null,
-    "ssh": null,
+    "https": "https://github.com/grgshiji/25Apr123.git",
+    "ssh": "git@github.com:grgshiji/25Apr123.git",
     "branch": "block_25Apr123"
   },
   "parentBlockIDs": [],
